--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "styled-components": "^5.3.5"
+    "react-tsparticles": "^2.0.6",
+    "styled-components": "^5.3.5",
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
