--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#63fffa",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#63fffa99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#63fffa"
 }
