--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install and Build
         run: |
           npm i
-          echo "VITE_API_URL=http://localhost:3002" >> .env
+          echo "VITE_API_URL=${{ secrets.API_BASE_URL }}" >> .env
           echo "VITE_DOMAIN=http://testdomain.io" >> .env
           npm run build
 
