--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.11",
     "three": "^0.179.1"
