--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.11",
-    "three": "^0.179.1"
+    "@tailwindcss/vite": "4.1.11",
+    "clsx": "2.1.1",
+    "framer-motion": "12.23.12",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-helmet": "6.1.0",
+    "react-icons": "5.5.0",
+    "tailwindcss": "4.1.11",
+    "three": "0.179.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "@types/react-helmet": "^6.1.11",
-    "@types/three": "^0.179.0",
-    "@vitejs/plugin-react-swc": "^3.11.0",
-    "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "@eslint/js": "9.32.0",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
+    "@types/react-helmet": "6.1.11",
+    "@types/three": "0.179.0",
+    "@vitejs/plugin-react-swc": "3.11.0",
+    "eslint": "9.32.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.20",
+    "globals": "16.3.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.0",
-    "vite": "^7.1.0"
+    "typescript-eslint": "8.39.0",
+    "vite": "7.1.0"
   }
 }
